force-app/main/default/objects/fw1__Transaction__c/fields/fw1__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Account_Type__c</fullName>
    <label>Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>