force-app/main/default/objects/fw1__Transaction__c/fields/fw1__Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>