force-app/main/default/objects/fw1__Transaction__c/fields/fw1__Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Number__c</fullName>
    <label>Credit Card Number</label>
    <length>19</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>