force-app/main/default/objects/fw1__Transaction__c/fields/fw1__Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Processor</label>
    <referenceTo>fw1__Payment_Processor__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>