force-app/main/default/objects/fw1__Transaction__c/fields/fw1__Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Transaction_ID__c</fullName>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>